--- a/search.html
+++ b/search.html
@@ -220,7 +220,7 @@
                 </div>
 				<!-- picture picked -->
 				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px">
-					<div  class="col-md-12 animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft" style="text-align: center">
+					<div  class="col-md-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
 						<select id="detect_pic" class="image-picker show-html" style="margin-bottom: 20px;display: none">
 
 						</select>
