--- a/search.html
+++ b/search.html
@@ -216,16 +216,16 @@
 			<div  id="pic-detect" class="animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;display: none" >
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 >Detected Images</h1>
+						<h1 >Detected Image</h1>
 						<div id="detect-load" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
 					</div>
 				</div>
-				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;margin-bottom:20px;height: 300px;text-align: center">
-					<img style="max-height: 100%;margin-bottom:20px;" id="image-detect" src="">
+				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;margin-bottom:20px;text-align: center">
+					<img style="height:500px;margin-bottom:20px;" id="image-detect" src="">
 				</div>
 				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                        <h3 >Choose a picture and search</h3>
+                        <h3 >Choose a image and search</h3>
                         <div id="detect-h2" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
 				</div>
 				<div class="row"  style="text-align: center">
 					<button id="btn-submit" type="button" class="btn btn-primary btn-outline animate-box" data-animate-effect="fadeInLeft" style="margin-top: 30px">
-						Search Picture
+						Search Image
 					</button>
 				</div>
 			</div>
@@ -248,7 +248,7 @@
 
 		<div id="searche-result" class="fh5co-narrow-content" style="display:none;">
 			<div class="row animate-box"   data-animate-effect="fadeInLeft">
-				<h1 class="fh5co-heading-colored">Query Picture</h1>
+				<h1 class="fh5co-heading-colored">Query Image</h1>
 				<div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
 					<ul id="myorigin" >
 						<li id="li_origin" style="list-style-type:none;">
