--- a/listPhotos.html
+++ b/listPhotos.html
@@ -89,21 +89,8 @@
 						<h1 class="fh5co-heading">DataBase List</h1>
 					</div>
 				</div>
-				<div class="fh5co-gallery animate-box" data-animate-effect="fadeInLeft">
-					<a class="gallery-item  "  href="single.html?name=car">
-						<img src="images/work_12.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-						<span class="overlay">
-						<h2>Car</h2>
-						<span>10000000 Photos</span>
-						</span>
-					</a>
-					<a class="gallery-item" href="single.html?name=people">
-						<img src="images/work_2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-						<span class="overlay">
-						<h2>People</h2>
-						<span>7 Photos</span>
-					</span>
-					</a>
+				<div id="add-data" class="fh5co-gallery animate-box" data-animate-effect="fadeInLeft">
+
 				</div>
 			</div>
 
@@ -145,7 +132,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
+	<script src="dataJs/photo.js"></script>
 	</body>
 </html>
 
