--- a/search.html
+++ b/search.html
@@ -78,7 +78,7 @@
 		</div>
 		<div>
 			<i id="move" class="fa fa-arrow-down" style="margin-top: 5px"></i>
-			<i id="move-up" class="fa fa-arrow-up" style="margin-top: 5px;display: none"></i>
+			<i id="move-up" class="fa fa-arrow-up" style="margin-top: 3px;display: none"></i>
 		</div>
 		<div>
 			<i id="refresh" class="fa fa-refresh"></i>
@@ -96,7 +96,7 @@
 		<nav id="fh5co-main-menu" role="navigation">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="listPhotos.html">Photos</a></li>
+				<li><a href="listPhotos.html">Data</a></li>
 				<li><a href="upload.html">Upload</a></li>
 				<li class="fh5co-active"><a href="search.html">Search</a></li>
 			</ul>
