--- a/upload.html
+++ b/upload.html
@@ -66,7 +66,7 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="listPhotos.html">Photos</a></li>
+					<li><a href="listPhotos.html">Data</a></li>
 					<li class="fh5co-active"><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
 				</ul>
