--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	
-
-  	
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -61,7 +57,7 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
-					<li><a href="listPhotos.html">Photos</a></li>
+					<li><a href="listPhotos.html">Data</a></li>
 					<li><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
 				</ul>
@@ -87,11 +83,11 @@
 				<div class="fh5co-narrow-content animate-box">
 					<div class="row" >
 						<div class="col-md-4 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50"></span>
+							<span id="data" class="fh5co-counter js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Data Bases</span>
 						</div>
 						<div class="col-md-4 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="10000000" data-speed="1000" data-refresh-interval="50"></span>
+							<span id="count" class="fh5co-counter js-counter" data-from="0" data-to="10000000" data-speed="1000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Photos</span>
 						</div>
 						<div class="col-md-4 text-center">
@@ -112,7 +108,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3>For Listing</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>Listing all databases</p>
 							</div>
 						</div>
 					</div>
@@ -123,7 +119,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3>For Uploading</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>Uploading the data</p>
 							</div>
 						</div>
 					</div>
@@ -134,7 +130,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3>For Searching</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>Searching and detect images</p>
 							</div>
 						</div>
 					</div>
@@ -179,7 +175,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
+	<script src="dataJs/index.js"></script>
 	</body>
 </html>
 
