--- a/single.html
+++ b/single.html
@@ -64,7 +64,7 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="listPhotos.html">Photos</a></li>
+					<li class="fh5co-active"><a href="listPhotos.html">Data</a></li>
 					<li><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
 				</ul>
