--- a/search.html
+++ b/search.html
@@ -180,12 +180,12 @@
 				<div class="row fh5co-border-bottom" style="margin-top: 20px;text-align: center">
 					<button id="btn-crop" type="button" class="btn btn-primary btn-outline" data-method="getCroppedCanvas" style="margin-bottom: 30px">
 						<span id="span-crop" class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Go Search">
-						  Get Cropped Picture
+						  Get Cropped Image
 						</span>
 					</button>
 					<button id="btn-detect" type="button" class="btn btn-primary btn-outline" data-method="getDetect" style="margin-bottom: 30px;display: none">
 						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Go Check">
-						  Check Picture
+						  Detect Image
 						</span>
 					</button>
 					<input type="checkbox" id="checkbox-11-2"  />
