--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 					<li><a href="listPhotos.html">Data</a></li>
 					<li><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
+					<li><a href="person.html">Person</a></li>
 				</ul>
 			</nav>
 
