--- a/listPhotos.html
+++ b/listPhotos.html
@@ -65,6 +65,7 @@
 					<li class="fh5co-active"><a href="listPhotos.html">Data</a></li>
 					<li><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
+					<li><a href="person.html">Person</a></li>
 				</ul>
 			</nav>
 
