--- a/search.html
+++ b/search.html
@@ -99,6 +99,7 @@
 				<li><a href="listPhotos.html">Data</a></li>
 				<li><a href="upload.html">Upload</a></li>
 				<li class="fh5co-active"><a href="search.html">Search</a></li>
+				<li><a href="person.html">Person</a></li>
 			</ul>
 		</nav>
 
@@ -372,7 +373,7 @@
 <!-- MAIN JS -->
 
 <script src="js/main.js"></script>
-<script src="dataJs/search.js"></script>
+<script src="dataJs/person.js"></script>
 </body>
 </html>
 
