--- a/upload.html
+++ b/upload.html
@@ -69,6 +69,7 @@
 					<li><a href="listPhotos.html">Data</a></li>
 					<li class="fh5co-active"><a href="upload.html">Upload</a></li>
 					<li><a href="search.html">Search</a></li>
+					<li><a href="person.html">Person</a></li>
 				</ul>
 			</nav>
 
@@ -132,7 +133,6 @@
 					<div id="show-tab4" class="animate-box " data-animate-effect="fadeInLeft" style="margin-top:15px ;display: none ">
 						<!--  upload file control -->
 						<!--<h3 style="margin-top: 15px">2. Upload the file:</h3>-->
-
 							<input type="file" name="files[]" id="filer_input" multiple="multiple">
 							<button id="submit-button" class=" btn btn-primary btn-block btn-outline" type="submit" value="Submit" style="width: 343px;margin: 0 auto 25px auto">
 								<B>Submit</B>
