change for person
person change

--- a/person.html
+++ b/person.html
@@ -113,7 +113,7 @@
             <div id="show-main">
                 <div class="row">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                        <h1 class="fh5co-heading">Search Images</h1>
+                        <h1 class="fh5co-heading">Pedestrian Search</h1>
                     </div>
                 </div>
 
@@ -182,13 +182,6 @@
 						  Get Cropped Image
 						</span>
                         </button>
-                        <button id="btn-detect" type="button" class="btn btn-primary btn-outline" data-method="getDetect" style="margin-bottom: 30px;display: none">
-						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="Go Check">
-						  Detect Image
-						</span>
-                        </button>
-                        <input type="checkbox" id="checkbox-11-2"  />
-                        <label for="checkbox-11-2" style="margin-left:20px;margin-bottom: 4px;font-size: 62.5%"></label>
                     </div>
 
                 </div>
