--- a/listPhotos.html
+++ b/listPhotos.html
@@ -103,7 +103,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+						<p class="fh5co-lead">Made by su</p>
 						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
 					</div>
 
