--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
+	<meta name="usage" content="vehicle" />
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
@@ -373,7 +373,7 @@
 <!-- MAIN JS -->
 
 <script src="js/main.js"></script>
-<script src="dataJs/person.js"></script>
+<script src="dataJs/search.js"></script>
 </body>
 </html>
 
