--- a/person.html
+++ b/person.html
@@ -113,7 +113,7 @@
             <div id="show-main">
                 <div class="row">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                        <h1 class="fh5co-heading">Pedestrian Search</h1>
+                        <h1 class="fh5co-heading">Person Search</h1>
                     </div>
                 </div>
 
