--- a/search.html
+++ b/search.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 	</div>
-	<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+	<a id="change-contain" href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 	<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
 		<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
